make-a-wish-salesforce/objects/Lead.object
<CustomObject>
    <fields>
        <fullName>RE_Medical_Professional_First_Name__c</fullName>
        <description>FIRST_NAME</description>
        <label>RE Medical Professional First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Medical_Professional_Last_Name__c</fullName>
        <description>LAST_NAME</description>
        <label>RE Medical Professional Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Medical_Professional_Phone__c</fullName>
        <description>NUM</description>
        <label>RE Medical Professional Phone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Medical_Professional_Suffix__c</fullName>
        <description>SUFFIX_1</description>
        <label>RE Medical Professional Suffix</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Medical_Professional_Title__c</fullName>
        <description>TITLE_1</description>
        <label>RE Medical Professional Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Medical_Provider_Category__c</fullName>
        <description>RECIP_RELATION_CODE</description>
        <label>RE Medical Provider Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Middle_Name__c</fullName>
        <description>MIDDLE_NAME</description>
        <label>RE Middle Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Mobile_Phone__c</fullName>
        <description>NUM</description>
        <label>RE Mobile Phone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Non_Verbal__c</fullName>
        <description>PRIMARY_LANGUAGE</description>
        <label>RE Non - Verbal</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Other_Relationship_To_Child__c</fullName>
        <description>WISH_REFERRAL_CAT</description>
        <label>RE Other Relationship To Child</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_PD_Condition_Description__c</fullName>
        <description>ICD_CODE_DESCRIPTION</description>
        <label>RE PD Condition Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_PD_ICD_Code__c</fullName>
        <description>ICD_CODE</description>
        <label>RE PD ICD Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Parent_First_Name__c</fullName>
        <description>FIRST_NAME</description>
        <label>RE Parent First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Parent_Last_Name__c</fullName>
        <description>LAST_NAME</description>
        <label>RE Parent Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Phone__c</fullName>
        <description>NUM</description>
        <label>RE Phone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Preferred_Name__c</fullName>
        <description>NICKNAME</description>
        <label>RE Preferred Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_PrimaryDiagnosis_ConditionDescription__c</fullName>
        <description>ICD_CODE_DESCRIPTION</description>
        <label>RE PrimaryDiagnosis ConditionDescription</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Primary_Diagnosis__c</fullName>
        <description>ICD_CODE</description>
        <label>RE Primary Diagnosis</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Qualifying_Medical_Professional_Email__c</fullName>
        <description>NUM</description>
        <label>RE Qualifying Medical Professional Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Qualifying_Medical_Professional_Fax__c</fullName>
        <description>NUM</description>
        <label>RE Qualifying Medical Professional Fax</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Qualifying_Medical_Professional_First__c</fullName>
        <description>FIRST_NAME</description>
        <label>RE Qualifying Medical Professional First</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Qualifying_Medical_Professional_Last__c</fullName>
        <description>LAST_NAME</description>
        <label>RE Qualifying Medical Professional Last</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Qualifying_Medical_Professional_Phone__c</fullName>
        <description>NUM</description>
        <label>RE Qualifying Medical Professional Phone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Referred_Date__c</fullName>
        <description>REFERRAL</description>
        <label>RE Referred Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Referrer_City__c</fullName>
        <description>CITY</description>
        <label>RE Referrer City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Referrer_Email__c</fullName>
        <description>NUM</description>
        <label>RE Referrer Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Referrer_FirstName__c</fullName>
        <description>FIRST_NAME</description>
        <label>RE Referrer FirstName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Referrer_Last_Name__c</fullName>
        <description>LAST_NAME</description>
        <label>RE Referrer Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Referrer_Phone__c</fullName>
        <description>NUM</description>
        <label>RE Referrer Phone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Referrer_Zip__c</fullName>
        <description>POST_CODE</description>
        <label>RE Referrer Zip</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Relationship_to_child__c</fullName>
        <description>WISH_REFERRAL_CAT</description>
        <label>RE Relationship to child</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_State_Province__c</fullName>
        <description>STATE</description>
        <label>RE State/Province</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Status__c</fullName>
        <description>STATUS</description>
        <label>RE Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Street__c</fullName>
        <description>ADDRESS_BLOCK</description>
        <label>RE Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Sub_Status__c</fullName>
        <description>INCOMPLETE_STATUS</description>
        <label>RE Sub Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Zip_Postal_Code__c</fullName>
        <description>POST_CODE</description>
        <label>RE Zip/Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RFI_Form_Info_Hidden__c</fullName>
        <description>In hold the RFI form status level. And this field is hidden field for preventing dup criteria while creating new lead from RFI.</description>
        <label>RFI Form Info Hidden</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Inquiry</fullName>
                </value>
                <value>
                    <fullName>Referred</fullName>
                </value>
                <value>
                    <fullName>Qualified</fullName>
                </value>
                <value>
                    <fullName>Not Qualified</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reason_for_Need__c</fullName>
        <description>Total Parenteral Nutrition</description>
        <label>Reason for Need</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Referred_Date__c</fullName>
        <description>This field will capture the date value when the lead is is referred</description>
        <label>Referred Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Referrer_City__c</fullName>
        <description>It will capture city of the wih&apos;s parent.</description>
        <label>Referrer City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referrer_Email__c</fullName>
        <description>It will capture email address of wish parent from referral form.</description>
        <label>Referrer Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Referrer_FirstName__c</fullName>
        <description>It will hold the firstname of the child.</description>
        <label>Referrer FirstName</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referrer_Last_Name__c</fullName>
        <description>It will capture the last name of child.</description>
        <label>Referrer Last Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referrer_Phone__c</fullName>
        <description>It will capture the phone number of Referrer</description>
        <label>Referrer Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Referrer_Zip__c</fullName>
        <description>It will capture the zipcode of wish&apos;s parent.</description>
        <label>Referrer Zip</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>It holds the region for chapter</description>
        <label>Region Code</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <filterItems>
                <field>$Source.ChapterName__c</field>
                <operation>equals</operation>
                <valueField>Regions__c.Chapter_Name__c</valueField>
            </filterItems>
            <filterItems>
                <field>Regions__c.Chapter_Name__c</field>
                <operation>equals</operation>
                <value></value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Regions__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Relationship_to_child__c</fullName>
        <description>This field is used to store the relationship of the person who submits the Wish Kid details</description>
        <label>Relationship to child</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Self</fullName>
                </value>
                <value>
                    <fullName>Medical Professional</fullName>
                </value>
                <value>
                    <fullName>Parent/Guardian</fullName>
                </value>
                <value>
                    <fullName>Family Member/Relative</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Responds_to_treatment_with_normal_health__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Wish Child responds to standard treatment which approximates normal health.</description>
        <inlineHelpText>Wish Child responds to standard treatment which approximates normal health.</inlineHelpText>
        <label>Responds to treatment with normal health</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Risk_of_complications_premature_death__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Wish Child has an non-progressive condition that may have a risk of complications and/or risk of premature death.</description>
        <inlineHelpText>Wish Child has an non-progressive condition that may have a risk of complications and/or risk of premature death.</inlineHelpText>
        <label>Risk of complications &amp; premature death</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SD1_Condition_Description__c</fullName>
        <description>It holds the condition description for Secoundary Diagnosis 1</description>
        <label>Secondary Diagnosis 1 Cond Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SD1_ICD_Code__c</fullName>
        <description>It contains ICD code for Secondary Diagnosis 1</description>
        <label>Secondary Diagnosis 1 ICD-10 Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SD2_Condition_Description__c</fullName>
        <description>It holds the condition description for Secoundary Diagnosis 2</description>
        <label>Secondary Diagnosis 2 Cond Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SD2_ICD_Code__c</fullName>
        <description>It contains ICD code for Secondary Diagnosis 2</description>
        <label>Secondary Diagnosis 2 ICD-10 Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SD3_Condition_Description__c</fullName>
        <description>It holds the condition description for Secoundary Diagnosis 3</description>
        <label>Secondary Diagnosis 3 Cond Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SD3_ICD_Code__c</fullName>
        <description>It contains ICD code for Secondary Diagnosis 3</description>
        <label>Secondary Diagnosis 3 ICD-10 Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Short_Description__c</fullName>
        <description>It holds the short description of ICD code.</description>
        <label>Short Description</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sibling_Detail__c</fullName>
        <description>It will hold the sibling name and age details.</description>
        <label>Sibling Detail</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>State_Picklist__c</fullName>
        <description>It holds the States Picklist</description>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>State_Picklist</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Strokes__c</fullName>
        <description>It will hold the value of Travel Algorithm additional questions. Hidden field.</description>
        <label>Strokes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Status__c</fullName>
        <description>This field value is updated when the part A case status is In progress.</description>
        <label>Sub Status</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Status</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Local</fullName>
                </value>
                <value>
                    <fullName>National</fullName>
                </value>
                <value>
                    <fullName>Medical</fullName>
                </value>
                <value>
                    <fullName>Previous Wish</fullName>
                </value>
                <value>
                    <fullName>Age</fullName>
                </value>
                <value>
                    <fullName>No Response</fullName>
                </value>
                <value>
                    <fullName>Pending Diagnosis Verification</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TPN_Year__c</fullName>
        <description>It holds the year value for Part A Form</description>
        <label>TPN Year</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>16</fullName>
                </value>
                <value>
                    <fullName>17</fullName>
                </value>
                <value>
                    <fullName>18</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>This_Statement_Describes_My_Patient__c</fullName>
        <description>It will hold the detail about the patient</description>
        <label>This Statement Describes My Patient</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Travel_algorithm__c</fullName>
        <description>Used to store travel checklists</description>
        <label>Travel algorithm</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Treating_Medical_Professional_Contact_Id__c</fullName>
        <description>It is an hidden field. Storing the original Treating Medical Professional Contact Id. So while converting the lead, we can create a relationship under this Record instead of creating dup Treating  medical professional contact. we are capturing value for this field on Find Duplicate page.</description>
        <label>Treating Medical Professional Contact Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Treating_Medical_Professional_Email__c</fullName>
        <description>This field will hold the Treating Medical Professional Email Address</description>
        <label>Treating Medical Professional Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Treating_Medical_Professional_Fax__c</fullName>
        <description>This field will hold the Treating Medical Professional  Fax number</description>
        <label>Treating Medical Professional Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Treating_Medical_Professional_First_Name__c</fullName>
        <description>This field will hold the Treating Medical Professional First Name</description>
        <label>Treating Medical Professional First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Treating_Medical_Professional_Last_Name__c</fullName>
        <description>This field will hold the details about Treating Medical Professional Name</description>
        <label>Treating Medical Professional Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Treating_Medical_Professional_Phone__c</fullName>
        <description>This field will hold the Treating Medical Professional Phone number</description>
        <label>Treating Medical Professional Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Treatment_Subspecialty__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is used to display treatment  subspecialty from condition description object</description>
        <label>Treatment Subspecialty</label>
        <referenceTo>Condition_Description__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Treatment_may_be_feasible_but_can_fail__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Wish Child has a conditions for which curative treatment may be feasible but can fail</description>
        <inlineHelpText>Wish Child has a condition for which curative treatment may be feasible but can fail (e.g., cancer, irreversible organ failure, treatment failure does not include non-compliance)</inlineHelpText>
        <label>Treatment may be feasible but can fail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Treatment_may_prolong_normal_activities__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Wish Child has a condition where premature death is probable, but frequent and/or long periods of intensive treatment may prolong and allow participation in normal activities</description>
        <inlineHelpText>Wish Child has a progressive condition without curative treatment options in which debilitation may extend over many years. (e.g., neurodegenerative, severe treatment resistant epilepsy, metabolic disease)</inlineHelpText>
        <label>Treatment may prolong-normal activities</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ventilator__c</fullName>
        <description>It will hold the value of Ventilator travel algorithm.</description>
        <label>Ventilator</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>What_is_the_family_s_primary_spoken_lang__c</fullName>
        <description>Primary language of the wish family.</description>
        <label>Family Primary Language</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>English</fullName>
                </value>
                <value>
                    <fullName>Spanish</fullName>
                </value>
                <value>
                    <fullName>American Sign Language</fullName>
                </value>
                <value>
                    <fullName>Arabic</fullName>
                </value>
                <value>
                    <fullName>Chinese</fullName>
                </value>
                <value>
                    <fullName>French and French Creole</fullName>
                </value>
                <value>
                    <fullName>German</fullName>
                </value>
                <value>
                    <fullName>Hindi</fullName>
                </value>
                <value>
                    <fullName>Italian</fullName>
                </value>
                <value>
                    <fullName>Japanese</fullName>
                </value>
                <value>
                    <fullName>Korean</fullName>
                </value>
                <value>
                    <fullName>Polish</fullName>
                </value>
                <value>
                    <fullName>Portuguese</fullName>
                </value>
                <value>
                    <fullName>Russian</fullName>
                </value>
                <value>
                    <fullName>Tagalog</fullName>
                </value>
                <value>
                    <fullName>Vietnamese</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Why_do_you_feel_would_be_eligible_Wish__c</fullName>
        <description>It will hold details about medical equipment</description>
        <label>Why do you feel  would be eligible Wish?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Will_Child_s_Condition_Deteriorate__c</fullName>
        <description>It will hold detail about whether they expect this child&apos;s condition will significantly deteriorate in the next 3-6 months.</description>
        <label>Will Child&apos;s Condition Deteriorate?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Not Sure</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Wish_Family_ContactId__c</fullName>
        <description>It is an hidden field. Storing the original Wish Family Contact Id. So while converting the lead, we can create a relationship under this wish Family Record instead of creating dup wish family. we are capturing value for this field on Find Duplicate page.</description>
        <label>Wish Family ContactId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isApprove__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field will allow the duplicate lead</description>
        <label>isApprove</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isSign__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to verify the document is signed or not from docusign.</description>
        <label>isSign</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>is_Family_Aware_of_Referral__c</fullName>
        <description>This field indicate that Child Family aware of Referral at MAWA</description>
        <label>Is Family Aware of Referral?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>npe01__Preferred_Email__c</fullName>
        <label>Preferred Email</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Personal</fullName>
                </value>
                <value>
                    <fullName>Work</fullName>
                </value>
                <value>
                    <fullName>Alternate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>npe01__Preferred_Phone__c</fullName>
        <label>Preferred Phone</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Home</fullName>
                </value>
                <value>
                    <fullName>Work</fullName>
                </value>
                <value>
                    <fullName>Mobile</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>npsp__Batch__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The batch this lead was created from.</inlineHelpText>
        <label>Batch</label>
        <referenceTo>npsp__Batch__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>npsp__CompanyCity__c</fullName>
        <label>Company City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__CompanyCountry__c</fullName>
        <label>Company Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__CompanyPostalCode__c</fullName>
        <label>Company Zip/Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__CompanyState__c</fullName>
        <label>Company State/Province</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__CompanyStreet__c</fullName>
        <label>Company Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>of_Siblings__c</fullName>
        <description>It hold the count of siblings.</description>
        <label># of Siblings</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>unique_wish_identifier__c</fullName>
        <description>To store the unique wish identifier</description>
        <label>unique wish identifier</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>Alabama_Lead</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>Sub_Status__c</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.STATE_CODE</columns>
        <columns>LEAD.ZIP</columns>
        <columns>ChapterName__c</columns>
        <columns>Any_medical_reason_for_moving_quickly__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ChapterName__c</field>
            <operation>equals</operation>
            <value>Make-A-Wish Alabama</value>
        </filters>
        <label>Alabama</label>
        <sharedTo>
            <group>Alabama</group>
            <group>National_Office</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Alaska_Washington_Lead</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>LEAD.STATUS</columns>
        <columns>Sub_Status__c</columns>
        <columns>LEAD.STATE_CODE</columns>
        <columns>LEAD.ZIP</columns>
        <columns>ChapterName__c</columns>
        <columns>Any_medical_reason_for_moving_quickly__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ChapterName__c</field>
            <operation>equals</operation>
            <value>Make-A-Wish Alaska &amp; Washington</value>
        </filters>
        <label>Alaska &amp; Washington</label>
        <sharedTo>
            <group>Alaska_Washington</group>
            <group>National_Office</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AllOpenLeads</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notContain</operation>
            <value>closed</value>
        </filters>
        <label>All Open Leads</label>
    </listViews>
    <listViews>
        <fullName>All_Open_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE_CODE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <label>All Open Leads</label>
    </listViews>
</CustomObject>